Records and Roles update
